# tagged-union

./: .gitignore  tagged-union.cabal
benchmarks/: BenchAll.hs  StrictEither.hs  Values.hs
benchmarks/Implementations/: BalancedEithers.hs  LopsidedEithers.hs  StrictBalancedEithers.hs  StrictLopsidedEithers.hs  StrictSumtype.hs  Sumtype.hs  TUnion.hs
src/Data/: TaggedUnion.hs
src/Data/TaggedUnion/: Internal.hs  TypeLevel.hs
test/: Spec.hs
