name:                tagged-union
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/timjb/tagged-union#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
copyright:           MIT License
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.TaggedUnion,
                       Data.TaggedUnion.Internal,
                       Data.TaggedUnion.TypeLevel
  build-depends:       base >= 4.7 && < 5,
                       ghc-prim,
                       profunctors,
                       hvect,
                       vector
  default-language:    Haskell2010

test-suite tagged-union-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       tagged-union,
                       hvect,
                       HTF,
                       lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench-builder-all
  type:             exitcode-stdio-1.0
  hs-source-dirs:   . benchmarks
  main-is:          BenchAll.hs
  build-depends:    base,
                    criterion,
                    hvect,
                    tagged-union
  ghc-options:      -O2

source-repository head
  type:     git
  location: https://github.com/timjb/tagged-union
